--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - run:
           command: |
            git clone --depth=1 https://github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} script
-           bash /.circleci/build.sh
+        bash kernal_xiaomi_lavender/.circleci/build.sh
 workflows:
   version: 2.1
   cooking:
