--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,9 @@ jobs:
    steps:
       - run:
           command: |
-           git config --global user.name "sohamxda7"
-           git config --global user.email "sensoham135@gmail.com"
            git config --global color.ui false
            git clone --depth=1 https://github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} -b ${CIRCLE_BRANCH} .
-           bash kernal_xiaomi_lavender/.circleci/build.sh
+           bash kernel_xiaomi_lavender/.circleci/config.yml
 workflows:
   version: 2.1
   cooking:
